# loom-lens

./: .env.example  .gitignore  ARCHITECTURE.md  BLOCKED.md  CHECKPOINTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORTABILITY.md  README.md  SECURITY.md  STATUS.md  mise.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: build.rs  extract.rs  graph.rs  lib.rs  parser.rs  walk.rs
crates/core/tests/: python_fixture.rs
crates/effects/: Cargo.toml
crates/effects/src/: lib.rs
crates/hashing/: Cargo.toml
crates/hashing/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/viewer/: Cargo.toml  build.rs
crates/viewer/src/: assets.rs  lib.rs  routes.rs  state.rs
docs/: api.md
docs/decisions/: 0001-tech-stack.md  0002-effect-inference.md  0003-distribution.md  0004-mcp-tool-api.md
docs/effect-rules/: python.md  rust.md  typescript.md
documentation/docs/: PROVISIONING.md  api.md  viewer-mockup.md
documentation/docs/decisions/: 0000-template.md  0001-tech-stack.md  0002-effect-inference.md  0003-distribution.md  0004-mcp-tool-api.md  0005-repo-layout.md
documentation/docs/effect-rules/: python.md  rust.md  typescript.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Viewer.tsx  cy.ts  main.tsx  store.ts  types.ts
frontend/src/types/: cytoscape-dagre.d.ts  react-cytoscapejs.d.ts
nftables/: egress.nft
scripts/: init.sh  migrate.sh  refresh-egress.sh  run-agent.sh  snapshot.sh
systemd/: loom-lens-agent.service  loom-lens-egress.service
tests/fixtures/python/sample-repo/: README.md  pyproject.toml
tests/fixtures/python/sample-repo/src/sample_repo/: __init__.py  async_ops.py  clock.py  duplicates.py  errors.py  false_positives.py  io_ops.py  native.py  net.py  pure.py  randomness.py  state.py
tests/fixtures/rust/sample-repo/: Cargo.toml  README.md
tests/fixtures/rust/sample-repo/src/: async_ops.rs  clock.rs  duplicates.rs  errors.rs  false_positives.rs  foreign.rs  io_ops.rs  lib.rs  net.rs  pure_fn.rs  randomness.rs  state.rs
tests/fixtures/typescript/sample-repo/: README.md  package.json
tests/fixtures/typescript/sample-repo/src/: asyncOps.ts  clock.ts  duplicates.ts  errors.ts  falsePositives.ts  foreignBindings.ts  io.ts  net.ts  pure.ts  randomness.ts  state.ts
