[package]
name = "loom-lens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Loom Lens — see your codebase as a graph (CLI binary)."

[[bin]]
name = "loom-lens"
path = "src/main.rs"

[dependencies]
loom-lens-core = { workspace = true }
loom-lens-mcp = { workspace = true }
loom-lens-viewer = { workspace = true }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
