[package]
name = "loom-lens-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Heuristic effect inference engine for Loom Lens."

[dependencies]
loom-lens-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
