[package]
name = "loom-lens-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server exposing Loom Lens tools to Claude Code."

[dependencies]
loom-lens-core = { workspace = true }
loom-lens-viewer = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
