[package]
name = "loom-lens-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP server and embedded React/Cytoscape frontend for Loom Lens."

[dependencies]
loom-lens-core = { workspace = true }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
indexmap.workspace = true
