[project]
name = "sample-repo"
version = "0.0.0"
description = "Loom Lens fixture: Python effect-inference test repo. Not a real package."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
